@@ -6,3 +6,7 @@ mobac.mapsources.mappacks.region_america_north.ChartbundleSEC
 mobac.mapsources.mappacks.region_america_north.ChartbundleTAC
 mobac.mapsources.mappacks.region_america_north.ChartbundleWAC
 mobac.mapsources.mappacks.region_america_north.USNationalMapBase
+mobac.mapsources.mappacks.region_america_north.USNationalMapImagery
+mobac.mapsources.mappacks.region_america_north.USNationalMapImageryV
+mobac.mapsources.mappacks.region_america_north.USNationalMapVector
+mobac.mapsources.mappacks.region_america_north.USNationalMapTopo
